<resources>
    <string name="app_name">EspressoTest</string>
    <string name="thunder">⚡︎</string>

    <string name="password_error_too_short">Password must be at least 8 characters</string>
    <string name="password_error_case">Your password must contain a combination of uppercase and lowercase characters and at least one number</string>
    <string name="email_invalid">Your email address is invalid</string>
    <string name="unknown_error">Unknown error occurred </string>

    <string name="monkey_a">\uD83D\uDE48</string>
    <string name="monkey_b">\uD83D\uDE49</string>

    <string name="chicken">\uD83D\uDC14</string>
    <string name="octopus">\uD83D\uDC19</string>
    <string name="cat">\uD83D\uDE38</string>
    <string name="mouse">\uD83D\uDC2D</string>
    <string name="panda">\uD83D\uDC3C</string>

</resources>
